--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,44 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>{{ page.title }}</title>
+		<meta name="viewport" content="width=device-width">
+		<link rel="stylesheet" href="/css/syntax.css">
+		<link rel="stylesheet" href="/css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
+	</head>
+	<body>
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+		<div class="site">
+			<div class="menu">
+				<a href="/">Aktuell</a>
+				<a href="/">Pizza</a>
+				<a href="/">Satzung</a>
+				<a href="/">Derpina</a>
+				<a href="/">Wiki</a>
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
 
-    </head>
-    <body>
+			</div>
 
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
+			<div class="cont">
+				<div class="main_left">
+						{{ content }}
+				</div>
 
-          {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
-        </div>
-
-    </body>
+				<div class="main_right">
+					termine und so
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
