--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,9 @@
 
 		<div class="site">
 			<div class="menu">
-				<a href="/">Aktuell</a>
-				<a href="/">Pizza</a>
-				<a href="/">Satzung</a>
-				<a href="/">Derpina</a>
+				<a href="howtotreff.html">Treff</a>
+				<a href="verein.html">Verein</a>
+				<a href="kontakt.html">Kontakt</a>
 				<a href="/">Wiki</a>
 
 
