c¼h link zugefügt

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 		<div class="site">
 			<div class="menu">
 				<a href="howtotreff.html">Treff</a>
+				<a href="chaotische_viertelstunde.html">c¼h</a>
 				<a href="verein.html">Verein</a>
 				<a href="kontakt.html">Kontakt</a>
 				<a href="/">Wiki</a>
