--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
 	border-top: 0.2rem solid #4A3D34;
 	width: 100%;
 	height: 4.2rem;
-	padding: 0 2rem;
+	padding: 0 4rem;
 	color: #fff;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -30,7 +30,7 @@ body {
 .menu a {
 	display: inline-block;
 
-	padding:0rem 1rem;
+	padding:0rem 2.5rem;
 	margin-top: -0.2rem;
 	border-top: 0.2rem solid transparent;
 
@@ -53,8 +53,9 @@ body {
 }
 
 .cont {
-	margin: 0 2em;
-	margin-top: 6.3em;
+  margin-right: 2rem;
+  margin-left: 4rem;
+	margin-top: 6.3rem;
 }
 
 .main_left {
@@ -62,10 +63,10 @@ body {
 	display: block;
 	float:left;
 	vertical-align: top;
-	padding-right: 30em;
+	padding-right: 30rem;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	padding-bottom: 2em;
+	padding-bottom: 2rem;
 }
 
 .main_left > h1:first-child {
@@ -73,17 +74,17 @@ body {
 }
 
 .main_right {
-	width: 25em;
+	width: 25rem;
 	float: right;
 	display: block;
 
 	background: url(/img/noname.svg) top center no-repeat;
 	background-size: 22em;
-	padding-top: 8em;
+	padding-top: 8rem;
 
 	position: absolute;
-	top: 6em;
-	right: 2em;
+	top: 6rem;
+	right: 2rem;
 
 	position: fixed;
 }
