add link to start pageo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 
 		<div class="site">
 			<div class="menu">
+				<a href="/">tl;dr</a>
 				<a href="howtotreff.html">Treff</a>
 				<a href="chaotische_viertelstunde.html">c¼h</a>
 				<a href="verein.html">Verein</a>
