--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,16 @@
 				</div>
 
 				<div class="main_right">
-					termine und so
+					{% for termin in page.termine %}
+					<p>
+						Datum: {{ termin.date }}<br>
+						{% if termin.stammtisch %}
+						Location: {{ termin.location }}
+						{% else %}
+						c¼h: {{ termin.topic }}
+						{% endif %}
+					</p>
+					{% endfor %}
 				</div>
 			</div>
 		</div>
