--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="/css/syntax.css">
 		<link rel="stylesheet" href="/css/main.css">
+		<link rel="stylesheet" href="/css/leaflet.css">
+		<script src="/leaflet/leaflet.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
