--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,38 +1,12 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>{{ page.title }} – NoName e.V. Heidelberg</title>
-		<meta name="viewport" content="width=device-width">
-		<link rel="stylesheet" href="/css/syntax.css">
-		<link rel="stylesheet" href="/css/main.css">
-		<link rel="stylesheet" href="/css/leaflet.css">
-		<script src="/leaflet/leaflet.js"></script>
-		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-	</head>
-	<body>
+{% include header.html %}
 
-		<div class="site">
-			<div class="menu">
-				<a {% if page.url == "/index.html"                    %} class="active" {% endif %} href="/index.html">tl;dr</a>
-				<a {% if page.url == "/howtotreff.html"               %} class="active" {% endif %} href="/howtotreff.html">Treff</a>
-				<a {% if page.url == "/chaotische_viertelstunde.html" %} class="active" {% endif %} href="/chaotische_viertelstunde.html">c¼h</a>
-				<a {% if page.url == "/verein.html"                   %} class="active" {% endif %} href="/verein.html">Verein</a>
-				<a {% if page.url == "/kontakt.html"                  %} class="active" {% endif %} href="/kontakt.html">Kontakt</a>
-				<a href="https://www.noname-ev.de/w/">Wiki</a>
-			</div>
+<div class="main_left">
+		{{ content }}
+</div>
 
-			<div class="cont">
-				<div class="main_left">
-						{{ content }}
-				</div>
+<div class="main_right">
+	{% include foto.md %}
+	{% include termine.md %}
+</div>
 
-				<div class="main_right">
-					{% include foto.md %}
-					{% include termine.md %}
-				</div>
-			</div>
-		</div>
-	</body>
-</html>
+{% include footer.html %}
