--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="/css/main.css">
 		<link rel="stylesheet" href="/css/leaflet.css">
 		<script src="/leaflet/leaflet.js"></script>
+		<script src="/js/turbolinks.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
