ja ich bin zu faul mir ne psql hier einzurichten und muss daher secure ganz viel CI für mich machen

--- a/css/main.css
+++ b/css/main.css
@@ -168,11 +168,12 @@ th, td {
 	vertical-align: top;
 }
 
-td:first-child {
-	width: 7.5rem;
+th:first-child {
+	width: 4rem;
+	padding-right: 1rem;
 }
 
-td:last-child {
+th:last-child {
 	text-align: right;
 }
 
