--- a/_layouts/stammtisch.html
+++ b/_layouts/stammtisch.html
@@ -35,20 +35,7 @@
 </div>
 
 <div class="main_right">
-	<ul>
-	{% for st in site.pages %}
-		{% if st.layout == "stammtisch" %}
-			<li><a href="{{st.url}}">
-				{% if st.url == page.url %}
-					<b>{{st.name}}</b>
-				{% else %}
-					{{st.name}}
-				{% endif %}
-			</a></li>
-		{% endif %}
-	{% endfor %}
-	</ul>
-
+	{% include stammtisch_liste.md %}
 	{% include foto.md %}
 </div>
 
