mimi besser copy und pasten mimimi

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 
 		<div class="site">
 			<div class="menu">
-				<a {% if page.url == "/index.html"                    %} class="active" {% endif %} href="/index.html">tl;dr</a>
+				<a {% if page.url == "/index.html"                    %} class="active" {% endif %} href="/">tl;dr</a>
 				<a {% if page.url == "/howtotreff.html"               %} class="active" {% endif %} href="/howtotreff.html">Treff</a>
 				<a {% if page.url == "/chaotische_viertelstunde.html" %} class="active" {% endif %} href="/chaotische_viertelstunde.html">c¼h</a>
 				<a {% if page.url == "/verein.html"                   %} class="active" {% endif %} href="/verein.html">Verein</a>
