Entferne tel://-schema

--- a/_layouts/stammtisch.html
+++ b/_layouts/stammtisch.html
@@ -7,7 +7,7 @@
 	<p>
 		{{page.desc}}
 		{% if page.menu_url %}
-			<a href="tel://{{page.menu_url}}"><b>Speisekarte anzeigen</b></a>.
+			<a href="{{page.menu_url}}"><b>Speisekarte anzeigen</b></a>.
 		{% endif %}
 	</p>
 
