--- a/_layouts/stammtisch.html
+++ b/_layouts/stammtisch.html
@@ -28,7 +28,7 @@
 		{% if page.phone %}
 			<br/>Telefon: <a href="tel://{{page.phone}}">{{page.phone}}</a><br/>
 		{% endif %}
-		{% if page.phone %}
+		{% if page.website %}
 			Webseite: <a href="{{page.site_url}}">{{page.site_url}}</a><br/>
 		{% endif %}
 	</p>
