--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
 		<script src="/leaflet/leaflet.js"></script>
 		<script src="/js/turbolinks.js"></script>
 		<link href='//fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+		<link rel="shortcut icon" href="/img/favicon.ico" />
 	</head>
 	<body>
 
