--- a/css/small.css
+++ b/css/small.css
@@ -42,3 +42,23 @@
 .main_right img {
   max-width: 100%;
 }
+
+.qrcode {
+  padding-bottom: 1.5rem;
+  margin: 0.5rem 0;
+}
+
+.qrcode:before {
+  content: "Karte auf";
+}
+
+.qrcode img {
+  /* qr codes aufm handy… nope */
+  display: none;
+}
+
+#map {
+  margin-left: -1rem;
+  margin-right: -1rem;
+  height: 300px;
+}
