--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,10 @@ p {
 	margin: 0.2em 0;
 	margin-bottom: 0.6em;
 	line-height: 1.3em;
+	-ms-hyphens: auto;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	hyphens: auto;
 }
 
 
