--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>{{ page.title }} – NoName e.V. Heidelberg</title>
+		<title>{{ page.title | escape }} – NoName e.V. Heidelberg</title>
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="/css/syntax.css">
 		<link rel="stylesheet" href="/css/main.css">
