--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
 				<a {% if page.url == "/chaotische_viertelstunde.html" %} class="active" {% endif %} href="/chaotische_viertelstunde.html">c¼h</a>
 				<a {% if page.url == "/verein.html"                   %} class="active" {% endif %} href="/verein.html">Verein</a>
 				<a {% if page.url == "/kontakt.html"                  %} class="active" {% endif %} href="/kontakt.html">Kontakt</a>
-				<a href="https://www.noname-ev.de/w/">Wiki</a>
+				<a data-no-turbolink href="https://www.noname-ev.de/w/">Wiki</a>
 			</div></div>
 
 			<div class="cont">
