--- a/css/main.css
+++ b/css/main.css
@@ -168,18 +168,16 @@ address {
 
 
 iframe {
-	position: absolute;
-	top: 0rem;
+	position: fixed;
+	top: 5rem;
 	left: 0rem;
 	width: 100%;
 	height: 100%;
-	padding-top: 4.2rem;
-
-	-moz-box-sizing: border-box;
+	padding-bottom: 5rem;
 	box-sizing: border-box;
-
-	border: 0;
+	-moz-box-sizing: border-box;
 	z-index: 9000;
+	border: 0;
 }
 
 table {
