--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>{{ page.title | escape }} – NoName e.V. Heidelberg</title>
-		<meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="/css/syntax.css">
 		<link rel="stylesheet" href="/css/main.css">
 		<link rel="stylesheet" media="(max-width: 850px)" href="/css/small.css" />
