try to get rid of logo some more while printing

--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ body, iframe {
 }
 
 @media print {
-	.main_right { display: none }
+	.main_right { display: none; background: transparent; }
 }
 
 
