--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,7 @@ label {
 }
 
 label + input {
-	display: include-block;
+	display: inline-block;
 	width: 20rem;
 }
 
@@ -303,6 +303,7 @@ a.button {
 	padding: 0.5em 1em;
 	border-radius: 0.3em;
 	background: #cccac5;
+	display: inline-block;
 }
 
 a.button:hover {
