Bugfix: Rename title to locname for stammtisch locations
This bug was introduced in 919ea18d601b60c9f9c50567bf43fd5f64fc5f99. The
field was changed in the stammtisch files but not in all the code that
uses them.

--- a/www/_layouts/stammtisch.html
+++ b/www/_layouts/stammtisch.html
@@ -16,7 +16,7 @@
 	var map = L.map('map').setView([{{page.map_lat}}, {{page.map_lon}}], {{page.map_zoom}});
 	{{site.map_js}}
 
-	L.marker([{{page.lat}}, {{page.lon}}]).addTo(map).bindPopup("<b>{{page.title | escape}}</b>", { "closeButton": false }).openPopup();
+	L.marker([{{page.lat}}, {{page.lon}}]).addTo(map).bindPopup("<b>{{page.locname | escape}}</b>", { "closeButton": false }).openPopup();
 	</script>
 
 	<p>
