Hotfix for Crypto bug after commit 28e440af335fb314e8e9913302db9f8c3c462a7a.

--- a/www/_includes/header.html
+++ b/www/_includes/header.html
@@ -7,11 +7,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="/css/syntax.css">
 		<link rel="stylesheet" href="/css/main.css">
-		<link rel="stylesheet" media="(max-width: 850px)" href="/css/small.css" />
+		<link rel="stylesheet" media="(max-width: 1040px)" href="/css/small.css">
 		<link rel="stylesheet" href="/css/leaflet.css">
 		<script src="/leaflet/leaflet.js"></script>
 		<script src="/js/turbolinks.js"></script>
-		<link rel="shortcut icon" href="/img/favicon.ico" />
+		<link rel="shortcut icon" href="/img/favicon.ico">
 	</head>
 	<body lang="de">
 
