--- a/www/_includes/header.html
+++ b/www/_includes/header.html
@@ -24,7 +24,7 @@
 				<a {% if page.url == "/kontakt.html"                  %} class="active" {% endif %} href="/kontakt.html">Kontakt</a>
 				<a data-no-turbolink href="https://www.noname-ev.de/w/">Wiki</a>
 				<a {% if page.url == "/cryptoparty.html"              %} class="active" {% endif %} href="/cryptoparty.html">Cryptoparty</a>
-				<a {% if page.url == "/english.html"                  %} class="active" {% endif %} href="/english.html" lang="en">English</a>
+				<a {% if page.url == "/en/intro.html"                 %} class="active" {% endif %} href="/en/intro.html" lang="en">English</a>
 			</div></div>
 
 			<div class="cont">
