--- a/www/_layouts/stammtisch.html
+++ b/www/_layouts/stammtisch.html
@@ -20,10 +20,8 @@
 	</script>
 
 	<p>
-		{% if page.gmaps_url %}
-			<a href="{{page.gmaps_url | escape}}">Gaststätte in Google Maps anzeigen</a><br/>
-		{% endif %}
-		<br/><a href="https://www.vrn.de/mng/#/XSLT_TRIP_REQUEST2?restriction=0&dest={{page.address}}&isDeparture=true">ÖPNV-Fahrplanauskunft</a><br/>
+		<a href="https://maps.openrouteservice.org/directions?a=null,null,{{page.lat}},{{page.lon}}">Routenplaner anzeigen</a><br/>
+		<a href="https://www.vrn.de/mng/#/XSLT_TRIP_REQUEST2?restriction=0&dest={{page.address}}&isDeparture=true">ÖPNV-Fahrplanauskunft</a><br/>
 		{% if page.phone %}
 			Telefon: <a href="tel://{{page.phone | escape}}" itemprop="tel">{{page.phone | escape}}</a><br/>
 		{% endif %}
